project 4 hero change 2

--- a/03/Gallery/photos/Templates/photos.html
+++ b/03/Gallery/photos/Templates/photos.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% for photo in photos %}
-<img scr="{{photo}}" alt=""{{photo}} width="200">
+<img scr="{{photo}}" alt="{{photo}} "width="200">
 
 
 <!--<a href="{{ photo }}">
