--- a/03/Superhero/hero/templates/heroes.html
+++ b/03/Superhero/hero/templates/heroes.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-{% for hero in heroes %}
+{% for heroes in hero %}
 
-<a href="/hero/{{ hero.id }}">
-    <img class="hero" src="/{{ hero.file }}" alt="Chapter {{ hero.id }}" width="200">
+<a href="/heroes/{{ heroes.id }}">
+    <img class="heroes" src="/{{ heroes.file }}" alt="Chapter {{ heroes.id }}" width="200">
 </a>
 
 {% endfor %}
