saved changes to something

--- a/06/Blog/blog/templates/_navbar.html
+++ b/06/Blog/blog/templates/_navbar.html
@@ -2,7 +2,7 @@
 
     <div class="container">
 
-        <a class="navbar-brand text-light" href="/">Blog Builder</a>
+        <a class="navbar-brand text-light" href="/">Superhero Blog</a>
 
         <ul class="navbar-nav text-light ml-auto">
 
