--- a/06/Blog/blog/templates/theme.html
+++ b/06/Blog/blog/templates/theme.html
@@ -18,7 +18,7 @@
     {% endblock navbar %}
 
     <header class="bg-primary p-5 mb-5">
-        <h1>Blog Builder</h1>
+        <h1>Superhero Blog</h1>
         <h2>Data Views Application</h2>
     </header>
 
