--- a/Superhero/hero/templates/article/edit.html
+++ b/Superhero/hero/templates/article/edit.html
@@ -1,19 +1,19 @@
 {% extends 'theme.html' %}
 
 {% block title %}
-Delete Hero
+Edit Article
 {% endblock title %}
 
 
 {% block content %}
 
-<!-- #<div class="container m-5"> -->
+<div class="container m-5">
 
+    {% load crispy_forms_tags %}
     <form action="" method="post">{% csrf_token %}
-        <p>Are you sure you want to delete "{{ object.title }}"?</p>
-        <input type="submit" value="Confirm">
+        {{ form }}
+        <button type="submit">Save Record</button>
     </form>
-
-
+</div>
 
 {% endblock content %}
