--- a/Superhero/hero/templates/theme.html
+++ b/Superhero/hero/templates/theme.html
@@ -12,7 +12,45 @@
 </head>
 
 <body class=" bg-dark text-light">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-light">
 
+        <div class="container">
+    
+            <a class="navbar-brand text-light" href="/">Superhero App</a>
+    
+            <ul class="navbar-nav text-light ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="{% url 'hero_list' %}">Heroes</a>
+                </li>
+                
+    
+    
+                {% if user.is_authenticated %}
+    
+                <li class="nav-item">
+                    <a class="nav-link  text-light " href="{% url 'logout' %}">Hello {{ user.username }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link  text-light " href="{% url 'logout' %}">Log out</a>
+                </li>
+    
+                {% else %}
+    
+                <li class="nav-item">
+                    <a class="nav-link  text-light " href="{% url 'login' %}">Log In</a>
+                </li>
+    
+                <li class="nav-item">
+                    <a class="nav-link  text-light " href="{% url 'signup' %}">Sign Up</a>
+                </li>
+    
+                {% endif %}
+    
+            </ul>
+    
+        </div>
+    
+    </nav>
     <header class="bg-primary p-5 mb-5">
         <h1>Hero Database</h1>
         <h2>Data Views Application</h2>
