--- a/Superhero/hero/templates/article/add.html
+++ b/Superhero/hero/templates/article/add.html
@@ -1,25 +1,21 @@
 {% extends 'theme.html' %}
 
+
 {% block title %}
-Add Article
+Add New Article
 {% endblock title %}
 
 
 {% block content %}
 
-<div class="container m-5"></div>
-    {% load crispy_forms_tags %}
-    <form method="post">
-        {% csrf_token %}
+<form action="" method="post">
+    {% csrf_token %}
 
-     {{ form }}
+    <table>
+        {{ form.as_table }}
+    </table>
 
-        <button type="submit">Sign Up</button>
-    </form>
-    <form action="" method="post">{% csrf_token %}
-        {{ form }}
-        <button type="submit">Save Record</button>
-    </form>
-</div>
+    <button class="btn btn-primary mt-5" type="submit">Save Record</button>
+</form>
 
 {% endblock content %}
