--- a/Superhero/hero/templates/article/edit.html
+++ b/Superhero/hero/templates/article/edit.html
@@ -1,19 +1,23 @@
 {% extends 'theme.html' %}
 
-{% block title %}
-Edit Article
-{% endblock title %}
 
 
-{% block content %}
+{% block content%}
 
 <div class="container m-5">
 
-    {% load crispy_forms_tags %}
-    <form action="" method="post">{% csrf_token %}
-        {{ form }}
-        <button type="submit">Save Record</button>
+    <h1 class="text-primary">Edit Article</h1>
+
+    <form action="" method="post">
+        {% csrf_token %}
+
+        <table>
+            {{ form.as_table }}
+        </table>
+
+        <button class="btn btn-primary mt-5" type="submit">Save Record</button>
     </form>
+
 </div>
 
-{% endblock content %}
+{% endblock content%}
